# Bitcoin

./: Cargo.toml  README.md
.cargo/: config.toml
src/: bitcoinscript.rs  block.rs  blockchain.rs  config.rs  hash_algo.rs  main.rs  merkle_node.rs  node.rs  transaction.rs
