[package]
name = "bitcoin"
version = "0.1.0"
edition = "2024"
authors = ["Bhaskar Hemanth <bhaskar96.surya@gmail.com>"]
repository = "https://github.com/bhaskar10h/Bitcoin"
description = "A Rust-based implementation of a simplified Bitcoin-like blockchain system, inspired by the work of RajputGarima/Bitcoin."
rust-version = "1.89.0"

[dependencies]
hex = "0.4.3"
lazy_static = "1.5.0"
prettytable-rs = "0.10.0"
rand = "0.9.2"
rand_core = "0.9.3"
ring = "0.17.14"
rsa = "0.9.8"
sha2 =  { version = "0.10.9", features = ["oid"] }
sha256 = "1.6.0"
